--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "dayjs": "^1.11.19",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
